# crossmux

./: .gitignore  AGENTS.md  README.en.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh.md  USER_GUIDE.md  platformio.ini
.github/workflows/: ci.yml  nightly.yml  release-fonts.yml  release.yml  sync-build.yml
.skills/: SKILL.md
docs/: file-formats.md  i18n.md  sd-card-fonts.md  troubleshooting.md  webserver-endpoints.md  webserver.md
docs/contributing/: architecture.md
docs/engineering/: build-system.md  cache-management.md  chinese-build.md  index.md  japanese-korean-build.md  kimtoma-reading-sync.md
lib/EpdFont/: EpdFont.cpp  SdCardFont.cpp
lib/Epub/: Epub.cpp  Epub.h
lib/GfxRenderer/: FontCacheManager.cpp  FontCacheManager.h  GfxRenderer.cpp  GfxRenderer.h
lib/I18n/: I18nKeys.h  I18nStrings.cpp  I18nStrings.h
lib/JsonParser/: ReleaseJsonParser.cpp  ReleaseJsonParser.h
lib/hal/: HalClock.cpp  HalStorage.cpp  HalStorage.h
scripts/: build_ko_firmware.py  gen_boot_logo.py  gen_i18n.py  gen_kimtoma_mark.py  generate_project_report.mjs  test_build_ko_firmware.py  test_gen_kimtoma_mark.py  test_generate_project_report.mjs  test_ko_workflow_gates.py  test_reading_sync_queue_schema.py  test_verify_ko_release.py  verify_ko_release.py  verify_project_report.mjs
simulator/: .gitignore  CMakeLists.txt  README.md  missing_symbols.cpp
simulator/hal/: HalClock.cpp
simulator/shims/: WiFi.h
src/: CrossPointSettings.cpp  CrossPointSettings.h  JsonSettingsIO.cpp  MappedInputManager.cpp  MappedInputManager.h  OpdsServerStore.cpp  ReadingStatsStore.cpp  ReadingStatsStore.h  SdCardFontSystem.cpp  SettingsList.h  main.cpp
src/activities/: ActivityManager.cpp  ActivityManager.h
src/images/: KimtomaMark120.h  Logo120.h
src/network/: CrossPointWebServer.cpp  CrossPointWebServer.h  HttpDownloader.cpp  HttpDownloader.h  OtaUpdater.cpp  ReadingSyncRawRequestState.h
src/reading_sync/: EpubOriginalCoverSource.cpp  EpubOriginalCoverSource.h  ReadingSyncClient.cpp  ReadingSyncClient.h  ReadingSyncCoordinator.cpp  ReadingSyncCoordinator.h  ReadingSyncCredentialStore.cpp  ReadingSyncCredentialStore.h  ReadingSyncPolicy.cpp  ReadingSyncPolicy.h  (+7 more)
test/: CMakeLists.txt
test/ko_hyphenation_profile/: CMakeLists.txt  KoHyphenationProfileTest.cpp
test/reading_sync/: CMakeLists.txt  EpubCoverPolicyTest.cpp  ReadingSyncClientPolicyTest.cpp  ReadingSyncPolicyTest.cpp  ReadingSyncUiPolicyTest.cpp
test/standby_time/: CMakeLists.txt  StandbyTimeTest.cpp
(+140 files in other folders)
